# gotta-really-catch-em-all

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: main.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/examapp_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/gotta_really_catch_em_all_backend.egg-info/: PKG-INFO  SOURCES.txt
docs/: admin.md  dev.md  user.md
docs/Development Docs internal use/: Architecture.md
frontend/: Dockerfile
infra/traefik/: dynamic.yml
scripts/: gen-client.sh
